# jukebox

./: .gitignore  api_server.py  main.py  media_player.py  media_scanner.py  pyproject.toml  readme.md  requirements.txt  song.py
docs/: setup_server.md
examples/example-frontend/: next.config.ts  package-lock.json  package.json
examples/example-frontend/src/app/: api.ts  globals.css  layout.tsx  page.tsx
scripts/: install.sh  setup_server.sh  start_server.sh  update.sh
services/: jukebox-backend.service  jukebox-frontend.service
src/: api_server.py  main.py  media_scanner.py  song.py
src/utils/: logger.py
test/: test_api_server.py  test_integration.py  test_logger.py  test_main.py  test_media_scanner.py  test_network_handling.py  test_queue.py  test_resources.py  test_song.py  test_vlc.py
utils/: logger.py
